syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.edu.ufabc.mfmachado.chordzilla.proto";

message NodeInformation {
  string id = 1;
  string ip = 2;
  int32 port = 3;
}

message Data {
  string key = 1;
  bytes value = 2;
}